plugins {
    id 'java'
	id 'application'
	id 'org.openjfx.javafxplugin' version '0.0.8'
}

group 'com.zazsona'
version '1.0'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
    jcenter()
}
sourceSets {
    main.java.srcDir "src/main/java"
    test.java.srcDir "src/test/java"
}

dependencies {
    compile 'org.slf4j:slf4j-api:1.7.25'
	compile 'org.slf4j:slf4j-log4j12:1.7.25'
    compile 'com.google.code.gson:gson:2.8.5'
	compile 'org.apache.commons:commons-lang3:3.9'
	compile 'org.apache.httpcomponents:httpclient:4.5.6'
	compile 'org.apache.httpcomponents:httpcore:4.4.11'
	compile 'org.apache.commons:commons-text:1.7'
	compile 'com.sedmelluq:lavaplayer:1.3.33'
	compile 'net.dv8tion:JDA:4.0.0_55'
	  
    testCompile group: 'junit', name: 'junit', version: '4.12'
}

task sourcesJar(type: Jar, dependsOn: classes) {
	classifier = 'sources'
	from sourceSets.main.allSource
}

javadoc.failOnError = false
task javadocJar(type: Jar, dependsOn: javadoc) {
	classifier = 'javadoc'
	from javadoc.destinationDir
}

artifacts {
	archives sourcesJar
	archives javadocJar
}

javafx {
	version = "13"
	modules = [ 'javafx.base', 'javafx.controls', 'javafx.fxml' ]
}

jar {
	from {
		configurations
			.compile
			.findAll { !it.name.endsWith('pom') }
			.collect { it.isDirectory() ? it : zipTree(it) }
	} 
    manifest.attributes 'Main-Class': 'jara.Boot'
}

application {
	mainClassName = 'com.Zazsona.jara.Boot'
}
